# claudavity

./: .antigravityignore  .env.example  .gitignore  LICENSE  README.md  SKILL.md  claude_agy_integration_design.md  implementation_plan.md  isolation.py  pyproject.toml  real_test_client.py  requirements.txt  server.py  telemetry.py  test_client.py  test_isolation.py
.agent/skills/claude_subagent/: SKILL.md
tests/: test_hooked_commit.py  test_integration.py  test_mcp_wiring.py
